--- a/TagsInputSample/Base.lproj/Main.storyboard
+++ b/TagsInputSample/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -43,12 +43,17 @@
                                 <rect key="frame" x="7" y="286" width="306" height="32"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </scrollView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="EPL-7k-D8g" customClass="TLTagsControl">
+                                <rect key="frame" x="7" y="326" width="306" height="32"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="blueEditingTagControl" destination="Rdj-EL-bmX" id="UKI-vs-keE"/>
                         <outlet property="blueListingTagControl" destination="JHV-ys-soh" id="Zif-pd-bRK"/>
+                        <outlet property="customCharacterSetTagControl" destination="EPL-7k-D8g" id="Jr8-IB-RE8"/>
                         <outlet property="defauldListingTagControl" destination="sBF-0F-nT1" id="ROo-dK-6a1"/>
                         <outlet property="defaultEditingTagControl" destination="K0q-hs-3Bd" id="grm-e1-849"/>
                         <outlet property="redEditingTagControl" destination="fuR-67-dAv" id="SUn-RV-HQM"/>
